--- a/index.html
+++ b/index.html
@@ -2,23 +2,140 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sigma Nu Kappa Rho</title>
+  <title>Kappa Rho 40th Anniversary</title>
   <style>
     body {
       margin: 0;
-      background-color: #000;
+      background-color: #111;
+      font-family: 'Segoe UI', sans-serif;
+      color: #f5f5f5;
+    }
+
+    header {
+      text-align: center;
+      padding: 3rem 1rem;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+      color: gold;
+    }
+
+    p.subtitle {
+      font-size: 1.2rem;
+      color: #ccc;
+    }
+
+    .tiers {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
-      align-items: center;
-      height: 100vh;
+      gap: 2rem;
+      padding: 2rem;
     }
-    img {
-      max-width: 100%;
-      max-height: 100%;
+
+    .tier {
+      background-color: #222;
+      border-radius: 10px;
+      padding: 1.5rem;
+      width: 320px;
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.1);
     }
+
+    .tier img {
+      width: 100%;
+      border-radius: 6px;
+    }
+
+    .tier h2 {
+      margin-top: 1rem;
+      color: gold;
+    }
+
+    .tier ul {
+      list-style: none;
+      padding-left: 0;
+      font-size: 0.95rem;
+      line-height: 1.5;
+    }
+
+    .tier .price {
+      font-size: 1.2rem;
+      font-weight: bold;
+      margin-top: 1rem;
+      color: #fff;
+    }
+
+    .tier a.button {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.6rem 1.2rem;
+      background-color: gold;
+      color: #111;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      color: #666;
+      font-size: 0.9rem;
+    }
+
   </style>
 </head>
 <body>
-  <img src="flyer-final.png" alt="Kappa Rho 40th Anniversary">
+
+<header>
+  <h1>Kappa Rho 40th Anniversary</h1>
+  <p class="subtitle">Select your commemorative tier package</p>
+</header>
+
+<section class="tiers">
+  <div class="tier">
+    <img src="tier-basic.png" alt="Basic Tier">
+    <h2>Basic Tier</h2>
+    <ul>
+      <li>Custom Polo</li>
+      <li>Bracelet</li>
+      <li>Food + Drink Ticket</li>
+    </ul>
+    <div class="price">$150</div>
+    <a class="button" href="#">Reserve</a>
+  </div>
+
+  <div class="tier">
+    <img src="tier-middle.png" alt="Middle Tier">
+    <h2>Middle Tier (Snake)</h2>
+    <ul>
+      <li>Everything in Basic</li>
+      <li>Whiskey Glass</li>
+      <li>Collectible Hat & Pin</li>
+      <li>Raffle Entry</li>
+    </ul>
+    <div class="price">$200</div>
+    <a class="button" href="#">Reserve</a>
+  </div>
+
+  <div class="tier">
+    <img src="tier-premium.png" alt="Premium Tier">
+    <h2>Premium Tier (Chapter Eternal)</h2>
+    <ul>
+      <li>Everything in Snake</li>
+      <li>Quarter Zip</li>
+      <li>Award + Recognition</li>
+    </ul>
+    <div class="price">$275</div>
+    <a class="button" href="#">Reserve</a>
+  </div>
+</section>
+
+<footer>
+  © 2025 Kappa Rho Legacy Foundation. All rights reserved.
+</footer>
+
 </body>
 </html>
