--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <li>Food + Drink Ticket</li>
     </ul>
     <div class="price">$150</div>
-    <a class="button" href="#">Reserve</a>
+    <a class="button" href="https://www.google.com/search?q=basic&rlz=1C1VDKB_enUS1075US1077&oq=basic&gs_lcrp=EgZjaHJvbWUyDAgAEEUYORixAxiABDINCAEQABiRAhiABBiKBTIQCAIQABiRAhixAxiABBiKBTIMCAMQABhDGIAEGIoFMgoIBBAuGLEDGIAEMg0IBRAuGK8BGMcBGIAEMgwIBhAAGEMYgAQYigUyDQgHEC4YrwEYxwEYgAQyBwgIEAAYgAQyCggJEAAYsQMYgATSAQgxNjU5ajBqN6gCALACAA&sourceid=chrome&ie=UTF-8">Reserve</a>
   </div>
 
   <div class="tier">
