--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Kappa Rho 40th Anniversary</title>
   <style>
-    margin: 0;
+    <body> {  
+      margin: 0;
       background: radial-gradient(circle at top left, #111 0%, #000 100%);
       animation: subtleShift 20s ease-in-out infinite alternate;
       display: flex;
@@ -24,6 +26,7 @@
       box-shadow: 0 0 12px gold;
       transform: scale(1.05);
       transition: 0.2s ease-in-out;
+    }
 
     header {
       text-align: center;
