--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <title>Kappa Rho 40th Anniversary</title>
   <style>
-    <body> {  
+    body {  
       margin: 0;
       background: radial-gradient(circle at top left, #111 0%, #000 100%);
       animation: subtleShift 20s ease-in-out infinite alternate;
