--- a/index.html
+++ b/index.html
@@ -15,29 +15,37 @@
     }
 
     body::before {
-      content: '';
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 200%;
-      height: 200%;
-      background: radial-gradient(circle at 30% 30%, #2c2c2c, #000000, #111);
-      animation: glowingGradient 30s ease-in-out infinite;
-      z-index: -1;
-      opacity: 0.6;
-    }
-    
-    @keyframes glowingGradient {
-      0% {
-        transform: translate(0%, 0%);
-      }
-      50% {
-        transform: translate(-25%, -25%);
-      }
-      100% {
-        transform: translate(0%, 0%);
-      }
-    }
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 300%;
+  height: 300%;
+  background: radial-gradient(circle at 30% 30%, #2c2c2c, #222, #000, #181818, #2b2b2b);
+  animation: glowingGradient 45s ease-in-out infinite;
+  z-index: -1;
+  opacity: 0.75;
+  filter: blur(40px);
+}
+
+@keyframes glowingGradient {
+  0% {
+    transform: translate(0%, 0%);
+  }
+  25% {
+    transform: translate(-15%, -10%);
+  }
+  50% {
+    transform: translate(-30%, -25%);
+  }
+  75% {
+    transform: translate(-15%, -10%);
+  }
+  100% {
+    transform: translate(0%, 0%);
+  }
+}
+
 
 
     .tier a.button:hover {
@@ -158,7 +166,7 @@
 </header>
 
 <section class="tiers">
-  <div class="tier" data-aos="fade-up" data-aos-delay="100">
+  <div class="tier" data-aos="fade-up" data-aos-delay="300">
     <img src="tier-basic.png" alt="Basic Tier">
     <h2>Basic Tier</h2>
     <ul>
@@ -170,7 +178,7 @@
     <a class="button" href="#">Reserve</a>
   </div>
 
-  <div class="tier" data-aos="fade-up" data-aos-delay="200">
+  <div class="tier" data-aos="fade-up" data-aos-delay="600">
     <img src="tier-middle.png" alt="Middle Tier">
     <h2>Middle Tier (Snake)</h2>
     <ul>
@@ -183,7 +191,7 @@
     <a class="button" href="#">Reserve</a>
   </div>
 
-  <div class="tier" data-aos="fade-up" data-aos-delay="300">
+  <div class="tier" data-aos="fade-up" data-aos-delay="900">
     <img src="tier-premium.png" alt="Premium Tier">
     <h2>Premium Tier (Chapter Eternal)</h2>
     <ul>
