--- a/index.html
+++ b/index.html
@@ -21,12 +21,21 @@
   left: 0;
   width: 300%;
   height: 300%;
-  background: radial-gradient(circle at 30% 30%, #2c2c2c, #222, #000, #181818, #2b2b2b);
+  background: radial-gradient(
+    circle at 30% 30%,
+    #0d0d0d 0%,
+    #111 20%,
+    #0b1a33 50%,     /* deep navy / royal blue */
+    #111 70%,
+    #1a1510 90%,     /* warm dark brown-gold hint */
+    #000 100%
+  );
   animation: glowingGradient 45s ease-in-out infinite;
   z-index: -1;
-  opacity: 0.75;
-  filter: blur(40px);
+  opacity: 0.8;
+  filter: blur(50px);
 }
+
 
 @keyframes glowingGradient {
   0% {
