--- a/index.html
+++ b/index.html
@@ -7,52 +7,55 @@
   <title>Kappa Rho 40th Anniversary</title>
   <style>
     body {  
+      background-color: #000;
       margin: 0;
-      position: relative;
-      overflow-x: hidden;
       font-family: 'Segoe UI', sans-serif;
+      position: relative;
+      overflow: hidden;
       z-index: 0;
     }
 
-    body::before {
+    /* Golden blob */
+body::before {
   content: '';
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 300%;
-  height: 300%;
-  background: radial-gradient(
-    circle at 30% 30%,
-    #0d0d0d 0%,
-    #111 20%,
-    #0b1a33 50%,     /* deep navy / royal blue */
-    #111 70%,
-    #1a1510 90%,     /* warm dark brown-gold hint */
-    #000 100%
-  );
-  animation: glowingGradient 45s ease-in-out infinite;
+  width: 600px;
+  height: 600px;
+  top: -100px;
+  left: -100px;
+  background: radial-gradient(circle, rgba(255, 215, 0, 0.1), transparent 70%);
+  filter: blur(100px);
+  animation: driftGold 40s ease-in-out infinite;
   z-index: -1;
-  opacity: 0.8;
-  filter: blur(50px);
+}
+
+    /* Blue blob */
+body::after {
+  content: '';
+  position: fixed;
+  width: 500px;
+  height: 500px;
+  bottom: -100px;
+  right: -150px;
+  background: radial-gradient(circle, rgba(0, 100, 255, 0.12), transparent 70%);
+  filter: blur(80px);
+  animation: driftBlue 60s ease-in-out infinite;
+  z-index: -1;
 }
 
 
-@keyframes glowingGradient {
-  0% {
-    transform: translate(0%, 0%);
-  }
-  25% {
-    transform: translate(-15%, -10%);
-  }
-  50% {
-    transform: translate(-30%, -25%);
-  }
-  75% {
-    transform: translate(-15%, -10%);
-  }
-  100% {
-    transform: translate(0%, 0%);
-  }
+/* Gold movement */
+@keyframes driftGold {
+  0%   { transform: translate(0, 0); }
+  50%  { transform: translate(100px, 150px); }
+  100% { transform: translate(0, 0); }
+}
+
+    /* Blue movement */
+@keyframes driftBlue {
+  0%   { transform: translate(0, 0); }
+  50%  { transform: translate(-120px, -80px); }
+  100% { transform: translate(0, 0); }
 }
 
 
