--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       position: relative;
-      overflow: hidden;
+      overflow-x: hidden;
       z-index: 0;
     }
 
