--- a/index.html
+++ b/index.html
@@ -223,6 +223,13 @@
         padding: 0.5rem 1rem;
       }
     }
+
+    .glow-on-load {
+  box-shadow: 0 0 30px 10px gold;
+  transition: box-shadow 1.5s ease-out;
+}
+
+    
   </style>
 </head>
 <body>
@@ -247,7 +254,7 @@
       <a class="button" href="#">Reserve</a>
     </div>
 
-    <div class="tier" data-aos="fade-up" data-aos-delay="600">
+    <div class="tier" data-aos="fade-up" data-aos-delay="500">
       <img src="tier-middle.png" alt="Middle Tier" />
       <h2>Middle Tier (Snake)</h2>
       <ul>
@@ -260,7 +267,7 @@
       <a class="button" href="#">Reserve</a>
     </div>
 
-    <div class="tier" data-aos="fade-up" data-aos-delay="900">
+    <div class="tier" id="premium-tier" data-aos="fade-up" data-aos-delay="800">
       <img src="tier-premium.png" alt="Premium Tier" />
       <h2>Premium Tier (Chapter Eternal)</h2>
       <ul>
@@ -284,6 +291,17 @@
       once: true,
       easing: 'ease-out-back'
     });
+
+    // Add golden glow on scroll-triggered reveal
+  document.addEventListener('aos:in', function(event) {
+    if (event.detail.id === 'premium-tier') {
+      const premium = document.getElementById('premium-tier');
+      premium.classList.add('glow-on-load');
+      setTimeout(() => {
+        premium.classList.remove('glow-on-load');
+      }, 1500); // match transition time
+    }
+  });
   </script>
 </body>
 </html>
