--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     </div>
 
     <div class="tier" data-aos="fade-up" data-aos-delay="500">
-      <img src="tier-middle.png" alt="Middle Tier" />
+      <img src="tier-middle-new.png" alt="Middle Tier" />
       <h2>Middle Tier (Snake)</h2>
       <ul>
         <li>Everything in Basic</li>
@@ -268,7 +268,7 @@
     </div>
 
     <div class="tier" id="premium-tier" data-aos="fade-up" data-aos-delay="800">
-      <img src="tier-premium.png" alt="Premium Tier" />
+      <img src="tier-premium-new.png" alt="Premium Tier" />
       <h2>Premium Tier (Chapter Eternal)</h2>
       <ul>
         <li>Everything in Snake</li>
