--- a/index.html
+++ b/index.html
@@ -307,13 +307,22 @@
     easing: 'ease-out-back'
   });
 
-  document.addEventListener('aos:in', function(event) {
-    if (event.target.id === 'premium-tier') {
-      const el = event.target;
-      el.classList.add('glow-on-load');
-    }
+  const premium = document.getElementById('premium-tier');
+
+  const observer = new IntersectionObserver((entries, obs) => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        premium.classList.add('glow-on-load');
+        obs.unobserve(premium); // prevent it from re-triggering
+      }
+    });
+  }, {
+    threshold: 0.1 // triggers as soon as it's visible enough to start fading
   });
+
+  observer.observe(premium);
 </script>
+
 
 
 </body>
