--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 }
 
 .glow-on-load {
-  animation: premiumGlow 1.5s ease-out 1.2s forwards;
+  animation: premiumGlow 1.5s ease-out forwards;
 }
 
 
