--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 }
 
 .event-flyer {
-  max-width: 100%;
+  max-width: 70%;
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(255, 215, 0, 0.1);
   margin-bottom: 2rem;
@@ -286,7 +286,7 @@
 
   <header>
     <h1>Kappa Rho 40th Anniversary</h1>
-    <p class="subtitle">Select your commemorative tier package</p>
+    
   </header>
 
   <section class="event-info" data-aos="fade-up">
@@ -297,14 +297,15 @@
       Join us for a once-in-a-lifetime celebration as we honor the legacy of Sigma Nu Kappa Rho,
       commemorate our 1000th initiated member, and reconnect with generations of alumni.
     </p>
-    <p><strong>Date:</strong> September 20, 2025<br>
-       <strong>Location:</strong> UC San Diego Faculty Club<br>
+    <p><strong>Date:</strong> October 17-20th, 2025<br>
+       <strong>Location:</strong> UC San Diego<br>
        <strong>Attire:</strong> Cocktail / Business Formal</p>
   </div>
 </section>
 
   
   <section class="tiers">
+    <p class="subtitle">Select your commemorative tier package</p>
     <div class="tier" data-aos="fade-up" data-aos-delay="300">
       <img src="tier-basic.png" alt="Basic Tier" />
       <h2>Basic Tier</h2>
