--- a/index.html
+++ b/index.html
@@ -277,6 +277,26 @@
   line-height: 1.6;
 }
 
+    .tiers-section {
+  text-align: center;
+  padding: 2rem 1rem;
+}
+
+.tiers {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+  padding: 2rem 1rem;
+}
+
+.subtitle {
+  font-size: 1.6rem;
+  font-family: 'DM Serif Display', serif;
+  color: gold;
+  margin-bottom: 1rem;
+}
+
     
   </style>
 </head>
@@ -304,8 +324,9 @@
 </section>
 
   
-  <section class="tiers">
-    <p class="subtitle">Select your commemorative tier package</p>
+  <section class="tiers-section">
+  <p class="subtitle">Select your commemorative tier package</p>
+  <div class="tiers">
     <div class="tier" data-aos="fade-up" data-aos-delay="300">
       <img src="tier-basic.png" alt="Basic Tier" />
       <h2>Basic Tier</h2>
