--- a/index.html
+++ b/index.html
@@ -297,6 +297,30 @@
   margin-bottom: 1rem;
 }
 
+    .event-overview {
+  text-align: center;
+  padding: 3rem 2rem;
+  color: #f5f5f5;
+  font-size: 1.2rem;
+  max-width: 800px;
+  margin: auto;
+}
+
+    .day-schedule {
+  background: rgba(255, 255, 255, 0.05);
+  padding: 2rem;
+  margin: 2rem auto;
+  border-radius: 12px;
+  max-width: 850px;
+  color: #eee;
+  box-shadow: 0 0 10px rgba(255, 215, 0, 0.15);
+}
+.day-schedule img {
+  max-width: 100%;
+  border-radius: 8px;
+  margin-top: 1rem;
+}
+
     
   </style>
 </head>
@@ -308,6 +332,12 @@
     <h1>Kappa Rho 40th Anniversary</h1>
     
   </header>
+
+  <section class="event-overview">
+  <h2>The Weekend at a Glance</h2>
+  <p>Join us for a celebration of brotherhood, legacy, and the 1000th member initiation. Below you'll find a detailed itinerary for the 3-day celebration, with each day bringing something special.</p>
+</section>
+
 
   <section class="event-info" data-aos="fade-up">
   <img src="flyer-final.png" alt="Event Flyer" class="event-flyer" />
@@ -322,6 +352,31 @@
        <strong>Attire:</strong> Cocktail / Business Formal</p>
   </div>
 </section>
+
+  <section class="day-schedule">
+  <h3>Friday – Welcome Reception</h3>
+  <p>Location: UC San Diego Faculty Club</p>
+  <p>Time: 6:00pm – 10:00pm</p>
+  <p>Enjoy hors d’oeuvres, wine tasting, and reconnecting with brothers from across the years.</p>
+  <img src="map-friday.png" alt="Friday Map">
+</section>
+
+<section class="day-schedule">
+  <h3>Saturday – Legacy Banquet</h3>
+  <p>Location: UCSD Atkinson Pavilion</p>
+  <p>Time: 5:00pm – 10:00pm</p>
+  <p>Formal dinner, award presentations, and the ceremonial honoring of our 1000th initiated brother.</p>
+  <img src="map-saturday.png" alt="Saturday Map">
+</section>
+
+<section class="day-schedule">
+  <h3>Sunday – Brotherhood Brunch</h3>
+  <p>Location: La Jolla Shores Park</p>
+  <p>Time: 10:00am – 1:00pm</p>
+  <p>Bring the whole family for catered brunch and farewell photos at the beach.</p>
+  <img src="map-sunday.png" alt="Sunday Map">
+</section>
+
 
   
   <section class="tiers-section">
