--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
   <p>Location: UC San Diego Faculty Club</p>
   <p>Time: 6:00pm – 10:00pm</p>
   <p>Enjoy hors d’oeuvres, wine tasting, and reconnecting with brothers from across the years.</p>
-  <img src="map-friday.png" alt="Friday Map">
+  <img src="warren-map.png" alt="Friday Map">
 </section>
 
 <section class="day-schedule">
@@ -366,7 +366,7 @@
   <p>Location: UCSD Atkinson Pavilion</p>
   <p>Time: 5:00pm – 10:00pm</p>
   <p>Formal dinner, award presentations, and the ceremonial honoring of our 1000th initiated brother.</p>
-  <img src="map-saturday.png" alt="Saturday Map">
+  <img src="shores-map.png" alt="Saturday Map">
 </section>
 
 <section class="day-schedule">
@@ -374,7 +374,7 @@
   <p>Location: La Jolla Shores Park</p>
   <p>Time: 10:00am – 1:00pm</p>
   <p>Bring the whole family for catered brunch and farewell photos at the beach.</p>
-  <img src="map-sunday.png" alt="Sunday Map">
+  <img src="zoot-map.png" alt="Sunday Map">
 </section>
 
 
