--- a/index.html
+++ b/index.html
@@ -306,22 +306,36 @@
   margin: auto;
 }
 
-    .event-days-section {
-  padding: 3rem 1.5rem;
+  .event-days-section {
   display: flex;
-  flex-direction: column;
-  gap: 3rem;
-  max-width: 1000px;
-  margin: auto;
+  flex-direction: row;
+  gap: 2rem;
+  overflow-x: auto;
+  padding: 2rem 1.5rem;
+  max-width: 100%;
+  scroll-snap-type: x mandatory;
 }
 
 .day-card {
+  scroll-snap-align: start;
+}
+
+
+.day-card {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
   background-color: #111;
   padding: 2rem;
   border-radius: 12px;
   box-shadow: 0 0 15px rgba(255, 215, 0, 0.08);
   transition: transform 0.3s ease;
+  min-width: 700px;
+  flex: 0 0 auto;
 }
+
 
 .day-card:hover {
   transform: scale(1.01);
@@ -350,14 +364,30 @@
   margin-bottom: 1.5rem;
 }
 
+
+    .day-content {
+  flex: 1;
+}
+
 .day-card img {
-  width: 100%;
-  max-width: 500px;
-  margin: 0 auto;
-  display: block;
+  max-width: 250px;
+  height: auto;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(255, 215, 0, 0.1);
 }
+
+    @media (max-width: 600px) {
+  .day-card {
+    flex-direction: column;
+    min-width: 100%;
+  }
+
+  .day-card img {
+    display: none;
+  }
+}
+
+
 
   .blob-gold {
   background: radial-gradient(circle, rgba(255, 215, 0, 0.35), transparent 70%);
@@ -432,61 +462,70 @@
 
  <section class="event-days-section">
   <div class="day-card" data-aos="fade-up">
+  <div class="day-content">
     <h2>Friday – October 17th</h2>
     <div class="day-meta">
       <span>📍 Dirty Birds (formerly Round Table Pizza)</span>
       <span>🕒 3:00pm – 7:00pm</span>
     </div>
     <p>
-      Begin the weekend by checking in at Dirty Birds, the newly renovated former Round Table Pizza spot. That evening, join us at the Chapter House for a casual Beirut Night and toast to the decades that brought us here.
+      Start the weekend at Dirty Birds, where you’ll check in and reconnect with brothers. That evening, head to the Chapter House for a classic Beirut Night and casual kickoff to the celebration.
     </p>
     <div class="day-meta">
       <span>📍 Chapter House</span>
       <span>🕗 8:00pm – Late</span>
     </div>
     <p>
-      Kick back with brothers old and new for an evening of drinks, games, and tradition.
+      Drinks, games, and stories under the roof that started it all.
     </p>
-    <img src="warren-map.png" alt="Friday Map">
   </div>
+  <img src="warren-map.png" alt="Friday Map">
+</div>
+
 
   <div class="day-card" data-aos="fade-up" data-aos-delay="150">
+  <div class="day-content">
     <h2>Saturday – October 18th</h2>
     <div class="day-meta">
       <span>📍 UCSD Campus</span>
-      <span>🕙 10:00am</span>
+      <span>🕙 10:00am – 12:00pm</span>
     </div>
     <p>
-      Secondary check-in followed by our annual Active/Alumni Chapter Meeting at 11:00am. Then, enjoy an alumni pub crawl starting at Dirty Birds.
+      Secondary check-in and our annual Active/Alumni Chapter Meeting. Then enjoy an alumni pub crawl starting from Dirty Birds.
     </p>
     <div class="day-meta">
       <span>📍 Dirty Birds (Pub Crawl Start)</span>
       <span>🕛 12:00pm – 3:00pm</span>
     </div>
     <p>
-      Reconnect with brothers in a laid-back, spirited afternoon of toasts and stories.
+      A spirited afternoon of drinks and memories with brothers across the generations.
     </p>
     <div class="day-meta">
       <span>📍 Shores Diner (formerly Porter’s Pub)</span>
       <span>🕠 5:30pm – 9:00pm</span>
     </div>
     <p>
-      Cap the night with a cocktail reception at Shores Diner. All guests and plus ones are welcome for this memorable evening of celebration and community.
+      Cocktail reception open to all guests and plus-ones — a celebratory night at the heart of UCSD.
     </p>
-    <img src="shores-map.png" alt="Saturday Map">
   </div>
+  <img src="shores-map.png" alt="Saturday Map">
+</div>
+
 
   <div class="day-card" data-aos="fade-up" data-aos-delay="300">
+  <div class="day-content">
     <h2>Sunday – October 19th</h2>
     <div class="day-meta">
       <span>📍 La Jolla Shores Park</span>
       <span>🕚 11:00am – 2:00pm</span>
     </div>
     <p>
-      Say farewell with a beachfront BBQ brunch for the whole family. Bring your sunglasses, appetite, and stories — we’ll bring the food and nostalgia.
+      Close out the weekend with a beachfront BBQ brunch for the whole family. Good food, goodbyes, and plenty of photo ops by the ocean.
     </p>
-    <img src="zoot-map.png" alt="Sunday Map">
   </div>
+  <img src="zoot-map.png" alt="Sunday Map">
+</div>
+
 </section>
 
 
