--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       line-height: 1.6;
     }
 
+    html {
+      scroll-behavior: smooth;
+    }
+
+
     /* Golden blob */
     body::before {
       content: '';
@@ -501,6 +506,62 @@
   display: inline-block;
 }
 
+    .event-intro {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+  padding: 4rem 2rem;
+  max-width: 1100px;
+  margin: auto;
+}
+
+.intro-left img.event-flyer {
+  max-width: 360px;
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(255, 215, 0, 0.15);
+}
+
+.intro-right {
+  flex: 1;
+  min-width: 300px;
+  max-width: 600px;
+}
+
+.intro-title {
+  font-family: 'DM Serif Display', serif;
+  font-size: 2.5rem;
+  color: gold;
+  margin-bottom: 1rem;
+}
+
+.intro-body {
+  font-size: 1.1rem;
+  color: #ddd;
+  line-height: 1.6;
+  margin-bottom: 1rem;
+}
+
+.intro-subinfo {
+  font-size: 1rem;
+  color: #aaa;
+  margin-bottom: 1.5rem;
+  line-height: 1.5;
+}
+
+@media (max-width: 768px) {
+  .event-intro {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .intro-left img {
+    max-width: 90%;
+  }
+}
+
     
   </style>
 </head>
@@ -533,25 +594,25 @@
 </div>
 
 
-  <section class="event-overview">
-  <h2>The Weekend at a Glance</h2>
-  <p>Join us for a celebration of brotherhood, legacy, and the 1000th member initiation. Below you'll find a detailed itinerary for the 3-day celebration, with each day bringing something special.</p>
-</section>
-
-
-  <section class="event-info" data-aos="fade-up">
-  <img src="flyer-final.png" alt="Event Flyer" class="event-flyer" />
-  <div class="event-text">
-    <h2>Celebrating 40 Years of Brotherhood</h2>
-    <p>
-      Join us for a once-in-a-lifetime celebration as we honor the legacy of Sigma Nu Kappa Rho,
+  <section class="event-intro" data-aos="fade-up">
+  <div class="intro-left">
+    <img src="flyer-final.png" alt="Event Flyer" class="event-flyer">
+  </div>
+  <div class="intro-right">
+    <h2 class="intro-title">Celebrating 40 Years of Brotherhood</h2>
+    <p class="intro-body">
+      Join us for a once-in-a-lifetime celebration as we honor the legacy of Sigma Nu Kappa Rho, 
       commemorate our 1000th initiated member, and reconnect with generations of alumni.
     </p>
-    <p><strong>Date:</strong> October 17-20th, 2025<br>
-       <strong>Location:</strong> UC San Diego<br>
-       <strong>Attire:</strong> Cocktail / Business Formal</p>
+    <p class="intro-subinfo">
+      📅 October 17–19, 2025<br>
+      📍 UC San Diego<br>
+      👔 Cocktail / Business Formal
+    </p>
+    <a href="#tiers" class="hero-cta-button">Reserve Your Spot</a>
   </div>
 </section>
+
 
  <section class="event-days-section">
   <div class="day-card" data-aos="fade-up">
@@ -623,7 +684,7 @@
 
 
   
-  <section class="tiers-section">
+  <section class="tiers-section" id="tiers">
   <p class="subtitle">Select your commemorative tier package</p>
   <div class="tiers">
     <div class="tier" data-aos="fade-up" data-aos-delay="300">
