--- a/index.html
+++ b/index.html
@@ -506,6 +506,11 @@
   display: inline-block;
 }
 
+    .hero-cta-button:hover {
+      box-shadow: 0 0 12px gold;
+      transform: scale(1.05);
+    }
+
     .event-intro {
   display: flex;
   flex-wrap: wrap;
@@ -584,7 +589,6 @@
     <div><span id="seconds">00</span><small>Seconds</small></div>
   </div>
 
-  <a href="#tiers" class="hero-cta-button">Reserve Your Spot</a>
 </header>
 
 <!-- decorative blobs and snakes go outside the header -->
