--- a/index.html
+++ b/index.html
@@ -504,6 +504,7 @@
   text-decoration: none;
   margin-top: 1.5rem;
   display: inline-block;
+  transition: 0.2s ease-in-out;
 }
 
     .hero-cta-button:hover {
