--- a/index.html
+++ b/index.html
@@ -594,8 +594,8 @@
 
 <!-- decorative blobs and snakes go outside the header -->
 <div class="hero-snakes">
-  <img src="snake-left.png" class="snake snake-left" alt="Snake Left">
-  <img src="snake-right.png" class="snake snake-right" alt="Snake Right">
+  <img src="snakeSword.png" class="snake snake-left" alt="Snake Left">
+  <img src="snakeSword.png" style="transform: scaleX(-1);" alt="Snake Mirrored">
 </div>
 
 
