--- a/index.html
+++ b/index.html
@@ -453,31 +453,45 @@
   color: #ccc;
 }
 
-    .snake {
+ .snake-container {
   position: absolute;
-  width: 160px;
-  opacity: 0.4;
-  animation: float 10s ease-in-out infinite;
+  animation: floatY 10s ease-in-out infinite;
   z-index: -1;
 }
 
-.snake-left {
+    .snake-left-container {
   top: 10%;
   left: 5%;
-  transform: rotate(-15deg);
+}
+
+.snake-right-container {
+  top: 20%;
+  right: 5%;
+}
+
+    .snake {
+  width: 160px;
+  opacity: 0.4;
+  animation: wiggle 8s ease-in-out infinite;
+  transform-origin: center center;
 }
 
 .snake-right {
-  top: 20%;
-  right: 5%;
-  transform: rotate(15deg);
+  transform: scaleX(-1);
 }
 
-@keyframes float {
-  0% { transform: translateY(0px) rotate(0deg); }
-  50% { transform: translateY(20px) rotate(20deg); }
-  100% { transform: translateY(0px) rotate(-10deg); }
+    @keyframes floatY {
+  0%   { transform: translateY(0px); }
+  50%  { transform: translateY(10px); }
+  100% { transform: translateY(0px); }
 }
+
+    @keyframes wiggle {
+  0%   { transform: rotate(0deg); }
+  50%  { transform: rotate(5deg); }
+  100% { transform: rotate(0deg); }
+}
+
 
 
     .hero-title {
@@ -593,10 +607,14 @@
 </header>
 
 <!-- decorative blobs and snakes go outside the header -->
-<div class="hero-snakes">
+<div class="snake-container snake-left-container">
   <img src="snakeSword.png" class="snake snake-left" alt="Snake Left">
-  <img src="snakeSword.png" class="snake snake-right" style="transform: scaleX(-1);" alt="Snake Mirrored">
 </div>
+
+<div class="snake-container snake-right-container">
+  <img src="snakeSword.png" class="snake snake-right" alt="Snake Right">
+</div>
+
 
 
   <section class="event-intro" data-aos="fade-up">
