--- a/index.html
+++ b/index.html
@@ -493,6 +493,13 @@
   transform-origin: center center;
 }
 
+    @media (min-width: 769px) {
+  .snake {
+    width: 200px; /* or 220px, whatever looks right */
+  }
+}
+
+
 .snake-right {
   transform: scaleX(-1);
 }
