--- a/index.html
+++ b/index.html
@@ -668,75 +668,71 @@
   </div>
 </section>
 
-<!--
- <section class="event-days-section">
+<section class="event-days-section">
   <div class="day-card" data-aos="fade-up">
-  <div class="day-content">
-    <h2>Friday – October 17th</h2>
-    <div class="day-meta">
-      <span>📍 Dirty Birds (formerly Round Table Pizza)</span>
-      <span>🕒 3:00pm – 7:00pm</span>
+    <div class="day-content">
+      <h2>Friday – October 17th</h2>
+      <div class="day-meta">
+        <span>📍 Dirty Birds (formerly Round Table Pizza)</span>
+        <span>🕒 3:00pm – 7:00pm</span>
+      </div>
+      <p>
+        Begin the weekend where it all started — at Dirty Birds, right on campus. Check in, grab your wristband, and reconnect over wings and brews with brothers from every era.
+      </p>
+      <div class="day-meta">
+        <span>📍 Chapter House</span>
+        <span>🕗 8:00pm – Late</span>
+      </div>
+      <p>
+        As the sun sets, make your way home — to the Chapter House. Beirut, house music, and stories echoing through the halls where it all began.
+      </p>
     </div>
-    <p>
-      Start the weekend at Dirty Birds, where you’ll check in and reconnect with brothers. That evening, head to the Chapter House for a classic Beirut Night and casual kickoff to the celebration.
-    </p>
-    <div class="day-meta">
-      <span>📍 Chapter House</span>
-      <span>🕗 8:00pm – Late</span>
-    </div>
-    <p>
-      Drinks, games, and stories under the roof that started it all.
-    </p>
+    <img src="warren-map.png" alt="Friday Map" />
   </div>
-  <img src="warren-map.png" alt="Friday Map">
-</div>
-
 
   <div class="day-card" data-aos="fade-up" data-aos-delay="150">
-  <div class="day-content">
-    <h2>Saturday – October 18th</h2>
-    <div class="day-meta">
-      <span>📍 UCSD Campus</span>
-      <span>🕙 10:00am – 12:00pm</span>
+    <div class="day-content">
+      <h2>Saturday – October 18th</h2>
+      <div class="day-meta">
+        <span>📍 UCSD Campus</span>
+        <span>🕙 10:00am – 12:00pm</span>
+      </div>
+      <p>
+        Official business meets brotherhood. Participate in our annual Chapter Meeting and help shape the next 40 years of Kappa Rho.
+      </p>
+      <div class="day-meta">
+        <span>📍 Dirty Birds → On-Campus Bars</span>
+        <span>🕛 12:00pm – 3:00pm</span>
+      </div>
+      <p>
+        Raise a glass (or a pitcher) on a nostalgic pub crawl through campus favorites. You'll be laughing like it's undergrad all over again.
+      </p>
+      <div class="day-meta">
+        <span>📍 Shores Diner (formerly Porter’s Pub)</span>
+        <span>🕠 5:30pm – 9:00pm</span>
+      </div>
+      <p>
+        Champagne, speeches, and the sound of legacy. Join us and your plus-one for the signature night of the weekend — a formal evening of toasts and memories.
+      </p>
     </div>
-    <p>
-      Secondary check-in and our annual Active/Alumni Chapter Meeting. Then enjoy an alumni pub crawl starting from Dirty Birds.
-    </p>
-    <div class="day-meta">
-      <span>📍 Dirty Birds (Pub Crawl Start)</span>
-      <span>🕛 12:00pm – 3:00pm</span>
-    </div>
-    <p>
-      A spirited afternoon of drinks and memories with brothers across the generations.
-    </p>
-    <div class="day-meta">
-      <span>📍 Shores Diner (formerly Porter’s Pub)</span>
-      <span>🕠 5:30pm – 9:00pm</span>
-    </div>
-    <p>
-      Cocktail reception open to all guests and plus-ones — a celebratory night at the heart of UCSD.
-    </p>
+    <img src="shores-map.png" alt="Saturday Map" />
   </div>
-  <img src="shores-map.png" alt="Saturday Map">
-</div>
-
 
   <div class="day-card" data-aos="fade-up" data-aos-delay="300">
-  <div class="day-content">
-    <h2>Sunday – October 19th</h2>
-    <div class="day-meta">
-      <span>📍 La Jolla Shores Park</span>
-      <span>🕚 11:00am – 2:00pm</span>
+    <div class="day-content">
+      <h2>Sunday – October 19th</h2>
+      <div class="day-meta">
+        <span>📍 La Jolla Shores Park</span>
+        <span>🕚 11:00am – 2:00pm</span>
+      </div>
+      <p>
+        One last hug, one last plate, and a group photo by the sea. Bring the whole family for brunch on the beach as we close out 40 unforgettable years.
+      </p>
     </div>
-    <p>
-      Close out the weekend with a beachfront BBQ brunch for the whole family. Good food, goodbyes, and plenty of photo ops by the ocean.
-    </p>
+    <img src="zoot-map.png" alt="Sunday Map" />
   </div>
-  <img src="zoot-map.png" alt="Sunday Map">
-</div>
-
 </section>
--->
+
 
   
   <section class="tiers-section" id="tiers">
