--- a/index.html
+++ b/index.html
@@ -311,15 +311,15 @@
   margin: auto;
 }
 
-  .event-days-section {
+.event-days-section {
   display: flex;
-  flex-direction: row;
-  gap: 2rem;
-  overflow-x: auto;
-  padding: 2rem 1.5rem;
-  max-width: 100%;
-  scroll-snap-type: x mandatory;
+  flex-direction: column;
+  gap: 3rem;
+  padding: 3rem 1.5rem;
+  max-width: 900px;
+  margin: auto;
 }
+
 
 .day-card {
   scroll-snap-align: start;
@@ -328,18 +328,16 @@
 
 .day-card {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  gap: 2rem;
-  background-color: #111;
-  padding: 2rem;
-  border-radius: 12px;
-  box-shadow: 0 0 15px rgba(255, 215, 0, 0.08);
-  transition: transform 0.3s ease;
-  min-width: 700px;
-  flex: 0 0 auto;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1.5rem;
+  background-color: transparent;
+  padding: 0;
+  box-shadow: none;
+  border-radius: 0;
+  transition: none;
 }
+
 
 
 .day-card:hover {
