--- a/index.html
+++ b/index.html
@@ -328,14 +328,30 @@
 
 .day-card {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 1.5rem;
+  flex-direction: row;
+  align-items: center;
+  gap: 2rem;
   background-color: transparent;
   padding: 0;
   box-shadow: none;
   border-radius: 0;
-  transition: none;
+}
+
+.day-card:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
+
+    @media (max-width: 768px) {
+  .day-card,
+  .day-card:nth-child(even) {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .day-card img {
+    margin: 0 auto;
+  }
 }
 
 
