--- a/index.html
+++ b/index.html
@@ -753,39 +753,20 @@
   <p class="subtitle">Select your commemorative tier package</p>
   <div class="tiers">
     <div class="tier" data-aos="fade-up" data-aos-delay="300">
-      <img src="tier-basic.png" alt="Basic Tier" />
-      <h2>Basic Tier</h2>
-      <ul>
-        <li>Custom Polo</li>
-        <li>Bracelet</li>
-        <li>Food + Drink Ticket</li>
-      </ul>
+      <img src="tier-basic-rock.png" alt="Basic Tier" />
       <div class="price">$150</div>
       <a class="button" href="#">Reserve</a>
     </div>
 
     <div class="tier" data-aos="fade-up" data-aos-delay="500">
       <img src="tier-middle-new.png" alt="Middle Tier" />
-      <h2>Middle Tier (Snake)</h2>
-      <ul>
-        <li>Everything in Basic</li>
-        <li>Whiskey Glass</li>
-        <li>Collectible Hat & Pin</li>
-        <li>Raffle Entry</li>
-      </ul>
-      <div class="price">$200</div>
+      <div class="price">$300</div>
       <a class="button" href="#">Reserve</a>
     </div>
 
     <div class="tier" id="premium-tier" data-aos="fade-up" data-aos-delay="800">
       <img src="tier-premium-new.png" alt="Premium Tier" />
-      <h2>Premium Tier (Chapter Eternal)</h2>
-      <ul>
-        <li>Everything in Snake</li>
-        <li>Quarter Zip</li>
-        <li>Award + Recognition</li>
-      </ul>
-      <div class="price">$275</div>
+      <div class="price">$500</div>
       <a class="button" href="#">Reserve</a>
     </div>
   </section>
