--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
   <p class="subtitle">Select your commemorative tier package</p>
   <div class="tiers">
     <div class="tier" data-aos="fade-up" data-aos-delay="300">
-      <img src="tier-basic-rock.png" alt="Basic Tier" />
+      <img src="tier-rock.png" alt="Basic Tier" />
       <div class="price">$150</div>
       <a class="button" href="#">Reserve</a>
     </div>
