--- a/index.html
+++ b/index.html
@@ -627,6 +627,15 @@
   }
 }
 
+    .day-card h3 {
+  font-size: 1.3rem;
+  color: gold;
+  font-family: 'DM Serif Display', serif;
+  margin: 1.5rem 0 0.3rem;
+  letter-spacing: 0.3px;
+}
+
+
     
   </style>
 </head>
@@ -676,7 +685,6 @@
     <p class="intro-subinfo">
       📅 October 17–19, 2025<br>
       📍 UC San Diego<br>
-      👔 Cocktail / Business Formal
     </p>
     <a href="#tiers" class="hero-cta-button">Reserve Your Spot</a>
   </div>
@@ -686,14 +694,16 @@
   <div class="day-card" data-aos="fade-up">
     <div class="day-content">
       <h2>Friday – October 17th</h2>
+      <h3>Check In & Kickoff</h3>
       <div class="day-meta">
         <span>📍 Dirty Birds (formerly Round Table Pizza)</span>
         <span>🕒 3:00pm – 7:00pm</span>
       </div>
       <p>
-        Begin the weekend where it all started — at Dirty Birds, right on campus. Check in, grab your wristband, and reconnect over wings and brews with brothers from every era.
+        Begin the weekend where it all started, right on campus. Check in, grab your wristband, and reconnect over wings and brews with brothers from every era.
       </p>
       <div class="day-meta">
+        <h3>Beirut Night</h3>
         <span>📍 Chapter House</span>
         <span>🕗 8:00pm – Late</span>
       </div>
@@ -708,14 +718,23 @@
     <div class="day-content">
       <h2>Saturday – October 18th</h2>
       <div class="day-meta">
-        <span>📍 UCSD Campus</span>
-        <span>🕙 10:00am – 12:00pm</span>
+        <h3>Secondary Check In</h3>
+        <span>📍 UCSD Lecture Hall</span>
+        <span>🕙 10:00am – 11:00am</span>
       </div>
       <p>
         Official business meets brotherhood. Participate in our annual Chapter Meeting and help shape the next 40 years of Kappa Rho.
       </p>
       <div class="day-meta">
-        <span>📍 Dirty Birds → On-Campus Bars</span>
+        <h3>Active/Alumni Chapter Meeting</h3>
+        <span>📍 UCSD Lecture Hall</span>
+        <span>🕙 11:00am – 12:00pm</span>
+      </div>
+      <p>
+        Join as us we come together as both the active and alumni chapters to conduct an all-chapter meeting. Enjoy 
+      </p>
+      <div class="day-meta">
+        <span>📍 Dirty Birds → Ridgewalk Social → Shores Diner</span>
         <span>🕛 12:00pm – 3:00pm</span>
       </div>
       <p>
