--- a/index.html
+++ b/index.html
@@ -710,8 +710,8 @@
       <p>
         Begin the weekend where it all started, right on campus. Check in, grab your wristband, and reconnect over wings and brews with brothers from every era.
       </p>
+      <h3>Beirut Night</h3>
       <div class="day-meta">
-        <h3>Beirut Night</h3>
         <span>📍 Chapter House</span>
         <span>🕗 8:00pm – Late</span>
       </div>
@@ -735,14 +735,15 @@
         Official business meets brotherhood. Participate in our annual Chapter Meeting and help shape the next 40 years of Kappa Rho.
       </p>
       </div>
+      <h3>Active/Alumni Chapter Meeting</h3>
       <div class="day-meta">
-        <h3>Active/Alumni Chapter Meeting</h3>
         <span>📍 UCSD Lecture Hall</span>
         <span>🕙 11:00am – 12:00pm</span>
       </div>
       <p>
         Join as us we come together as both the active and alumni chapters to conduct an all-chapter meeting. Enjoy 
       </p>
+      <h3>Pub Crawl</h3>
       <div class="day-meta">
         <span>📍 Dirty Birds → Ridgewalk Social → Shores Diner</span>
         <span>🕛 12:00pm – 3:00pm</span>
@@ -750,6 +751,7 @@
       <p>
         Raise a glass (or a pitcher) on a nostalgic pub crawl through campus favorites. You'll be laughing like it's undergrad all over again.
       </p>
+      <h3>Cocktail Reception</h3>
       <div class="day-meta">
         <span>📍 Shores Diner (formerly Porter’s Pub)</span>
         <span>🕠 5:30pm – 9:00pm</span>
